--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -21,6 +21,8 @@ jobs:
     steps:
     - name: Checkout with submodules
       uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
     - name: Formatting
       uses: github/super-linter@v7
       env:
