--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -29,21 +29,20 @@ jobs:
         VALIDATE_ALL_CODEBASE: false
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         VALIDATE_SNAKEMAKE_SNAKEFMT: true
-        VALIDATE_SNAKEMAKE_LINT: true
-  # linting:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - uses: actions/checkout@v4
-  #   - name: Linting
-  #     uses: snakemake/snakemake-github-action@v1.24.0
-  #     with:
-  #       snakefile: "workflow/Snakefile"
-  #       args: "--lint"
+  linting:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - name: Linting
+      uses: snakemake/snakemake-github-action@v1
+      with:
+        snakefile: "workflow/Snakefile"
+        args: "--lint"
 
   run-workflow:
     runs-on: ubuntu-latest
     needs:
-      # - linting
+      - linting
       - formatting
     steps:
     - name: Maximize build space
