--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -62,6 +62,7 @@ jobs:
       uses: mamba-org/setup-micromamba@v1
       with:
         environment-file: environment.yaml
+        micromamba-version: '1.5.9-0'
         create-args: >-
           apptainer
     - name: Test workflow
