--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -185,6 +185,11 @@ if config["analyses"]["relatedness"]["ngsrelate_ibsrelate-only"]:
         "results/datasets/{dataset}/analyses/kinship/ngsrelate/{dataset}.{ref}_all_{sites}-filts_ibsrelate-nofreq.html"
     )
 
+if config["analyses"]["relatedness"]["ngsrelate_freqbased"]:
+    all_outputs.append(
+        "results/datasets/{dataset}/analyses/kinship/ngsrelate/{dataset}.{ref}_all_{sites}-filts_ngsrelate-freq.html"
+    )
+
 if config["analyses"]["relatedness"]["ibsrelate_sfs"]:
     all_outputs.append(
         "results/datasets/{dataset}/analyses/kinship/ibsrelate_sfs/{dataset}.{ref}_all_{sites}-filts.kinship.html"
@@ -351,6 +356,14 @@ if config["subsample_analyses"]["relatedness"]["ngsrelate_ibsrelate-only"]:
     all_outputs.extend(
         expand(
             "results/datasets/{{dataset}}/analyses/kinship/ngsrelate/{{dataset}}.{{ref}}_all{dp}_{{sites}}-filts_ibsrelate-nofreq.html",
+            dp=subdp,
+        )
+    )
+
+if config["subsample_analyses"]["relatedness"]["ngsrelate_freqbased"]:
+    all_outputs.extend(
+        expand(
+            "results/datasets/{{dataset}}/analyses/kinship/ngsrelate/{{dataset}}.{{ref}}_all{dp}_{{sites}}-filts_ngsrelate-freq.html",
             dp=subdp,
         )
     )
