Reverting last two commits.
As I was trying to add mafs as a targetable output, the way I handled polarization of major/minor seemed needlessy complicated. Instead, maf can just be done separately in a single rule or two and it cuts down on complexity a lot.

--- a/.test/config/config.yaml
+++ b/.test/config/config.yaml
@@ -149,14 +149,12 @@ params:
     extra_saf: "" # goes to all -doSaf runs
     extra_beagle: "" # goes to all -doGlf 2 runs
     domajorminor: 1 # Currently only compatible with values 1, 2, 4, 5
-    domaf: 1 # Currently only compatible with values 1, 2, 3
-    popmafmaj: "population" # "all" or "population"
+    domaf: 1
     snp_pval: "1e-6"
     min_maf: -1 # Set -1 to disable
     mindepthind_heterozygosity: 1
   ngsrelate:
-    ibsrelate-only-extra: ""
-    freqbased-extra: ""
+    prune: true
   ngsld:
     max_kb_dist_est-ld: 200
     rnd_sample_est-ld: 0.001
