--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -70,7 +70,7 @@ jobs:
         sudo apt install -y software-properties-common
         sudo add-apt-repository -y ppa:apptainer/ppa
         sudo apt update
-        sudo apt install -y apptainer
+        sudo apt install -y apptainer-suid
         conda config --set channel_priority strict
         mkdir -p temp
         workdir=$(pwd -P)
