--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -270,7 +270,8 @@ if config["analyses"]["admix_ngsadmix"]:
             expand(
                 [
                     "results/datasets/{{dataset}}/plots/evaladmix/{{dataset}}.{{ref}}_all_excl_pca-admix_{{sites}}-filts_K{kvalue}_evaladmix.png",
-                    "results/datasets/{{dataset}}/plots/ngsadmix/{{dataset}}.{{ref}}_all_excl_pca-admix_{{sites}}-filts_K{kvalue}.pdf",
+                    "results/datasets/{{dataset}}/plots/ngsadmix/{{dataset}}.{{ref}}_all_excl_pca-admix_{{sites}}-filts.pdf",
+                    "results/datasets/{{dataset}}/analyses/ngsadmix/{{dataset}}.{{ref}}_all_excl_pca-admix_{{sites}}-filts.convergence_summary.html",
                 ],
                 kvalue=config["params"]["ngsadmix"]["kvalues"],
             )
@@ -280,7 +281,8 @@ if config["analyses"]["admix_ngsadmix"]:
             expand(
                 [
                     "results/datasets/{{dataset}}/plots/evaladmix/{{dataset}}.{{ref}}_all_{{sites}}-filts_K{kvalue}_evaladmix.png",
-                    "results/datasets/{{dataset}}/plots/ngsadmix/{{dataset}}.{{ref}}_all_{{sites}}-filts_K{kvalue}.pdf",
+                    "results/datasets/{{dataset}}/plots/ngsadmix/{{dataset}}.{{ref}}_all_{{sites}}-filts.pdf",
+                    "results/datasets/{{dataset}}/analyses/ngsadmix/{{dataset}}.{{ref}}_all_{{sites}}-filts.convergence_summary.html",
                 ],
                 kvalue=config["params"]["ngsadmix"]["kvalues"],
             )
@@ -488,7 +490,8 @@ if config["subsample_analyses"]["admix_ngsadmix"]:
             expand(
                 [
                     "results/datasets/{{dataset}}/plots/evaladmix/{{dataset}}.{{ref}}_all_excl_pca-admix{dp}_{{sites}}-filts_K{kvalue}_evaladmix.png",
-                    "results/datasets/{{dataset}}/plots/ngsadmix/{{dataset}}.{{ref}}_all_excl_pca-admix{dp}_{{sites}}-filts_K{kvalue}.pdf",
+                    "results/datasets/{{dataset}}/plots/ngsadmix/{{dataset}}.{{ref}}_all_excl_pca-admix{dp}_{{sites}}-filts.pdf",
+                    "results/datasets/{{dataset}}/analyses/ngsadmix/{{dataset}}.{{ref}}_all_excl_pca-admix{dp}_{{sites}}-filts.convergence_summary.html",
                 ],
                 kvalue=config["params"]["ngsadmix"]["kvalues"],
                 dp=subdp,
@@ -499,7 +502,8 @@ if config["subsample_analyses"]["admix_ngsadmix"]:
             expand(
                 [
                     "results/datasets/{{dataset}}/plots/evaladmix/{{dataset}}.{{ref}}_all{dp}_{{sites}}-filts_K{kvalue}_evaladmix.png",
-                    "results/datasets/{{dataset}}/plots/ngsadmix/{{dataset}}.{{ref}}_all{dp}_{{sites}}-filts_K{kvalue}.pdf",
+                    "results/datasets/{{dataset}}/plots/ngsadmix/{{dataset}}.{{ref}}_all{dp}_{{sites}}-filts.pdf",
+                    "results/datasets/{{dataset}}/analyses/ngsadmix/{{dataset}}.{{ref}}_all{dp}_{{sites}}-filts.convergence_summary.html",
                 ],
                 kvalue=config["params"]["ngsadmix"]["kvalues"],
                 dp=subdp,
