--- a/workflow/profiles/default/config.yaml
+++ b/workflow/profiles/default/config.yaml
@@ -1,3 +1,13 @@
+# Use this profile to modify resources for the workflow. All the values in here
+# are set to the 'defaults' by the workflow. Only threads and runtime are set
+# by default, as on most systems I've worked on, the most functional way to set
+# mem_mb is by setting it using --default-resources. See the included Dardel
+# profile in the repository as an example.
+
+# If you want to set a per rule mem_mb, just add it under the rule in the
+# set-resources section below. There will be an example on the first entry,
+# commented out.
+
 set-threads:
   # Reference Prep
   link_ref: 1
@@ -148,155 +158,276 @@ set-threads:
   # Identity by state matrix
   angsd_doIBS: 8
 set-resources:
-#   # Reference Prep
-#   link_ref:
-#   link_anc_ref:
-#   bwa_index:
-#   samtools_faidx:
-#   ref_chunking:
-#   picard_dict:
-#   # Site filtering
-#   genome_bed:
-#   smallscaff_bed:
-#   sexlink_bed:
-#   ## Mappability filtering
-#   genmap_index:
-#   genmap_map:
-#   windowgen:
-#   pileup_mappability:
-#   genmap_filt_bed:
-#   ## Repeat filtering
-#   repeat_builddatabase:
-#   repeatmodeler:
-#   repeatmasker:
-#   repeat_sum:
-#   ## Depth filtering
-#   angsd_depth:
-#   combine_depths:
-#   summarize_depths:
-#   depth_bed:
-#   ## Site-based missing data filtering
-#   angsd_missdata:
-#   missdata_bed:
-#   ## Generate combined filter files
-#   combine_beds:
-#   user_sites:
-#   filter_summary_table:
-#   # Raw sequencing data processing
-#   ncbi_download:
-#   fastp_mergedout:
-#   fastp_pairedout:
-#   fastp_multiqc:
-#   # Mapping
+  # Reference Prep
+  link_ref:
+    runtime: "5m"
+    # mem_mb: "1024M" # Example of how to set memory resources
+  link_anc_ref:
+    runtime: "5m"
+  bwa_index:
+    runtime: "2h"
+  samtools_faidx:
+    runtime: "1h"
+  ref_chunking:
+    runtime: "5m"
+  picard_dict:
+    runtime: "10m"
+  # Site filtering
+  genome_bed:
+    runtime: "10m"
+  smallscaff_bed:
+    runtime: "10m"
+  sexlink_bed:
+    runtime: "10m"
+  ## Mappability filtering
+  genmap_index:
+    runtime: "1h"
+  genmap_map:
+    runtime: "attempt * 360"
+  windowgen:
+    runtime: "12h"
+  pileup_mappability:
+    runtime: "8h"
+  genmap_filt_bed:
+    runtime: "1h"
+  ## Repeat filtering
+  repeat_builddatabase:
+    runtime: "1h"
+  repeatmodeler:
+    runtime: "7d"
+  repeatmasker:
+    runtime: "12h"
+  repeat_sum:
+    runtime: "1h"
+  ## Depth filtering
+  angsd_depth:
+    runtime: "attempt * 720"
+  combine_depths:
+    runtime: "10m"
+  summarize_depths:
+    runtime: "1h"
+  depth_bed:
+    runtime: "1h"
+  ## Site-based missing data filtering
+  angsd_missdata:
+    runtime: "attempt * 360"
+  missdata_bed:
+    runtime: "1h"
+  ## Generate combined filter files
+  combine_beds:
+    runtime: "4h"
+  user_sites:
+    runtime: "4h"
+  filter_summary_table:
+    runtime: "10m"
+  # Raw sequencing data processing
+  ncbi_download:
+    runtime: "6h"
+  fastp_mergedout:
+    runtime: "8h"
+  fastp_pairedout:
+    runtime: "8h"
+  fastp_multiqc:
+    runtime: "1h"
+  # Mapping
   bwa_aln_merged:
     runtime: "7d"
-#   bwa_samse_merged:
-#   bwa_mem_paired:
-#   bwa_mem_merged:
-#   samtools_merge_collapsed_libs:
-#   samtools_merge_paired_units:
-#   mark_duplicates:
-#   dedup_merged:
-#   dedup_sort:
-#   samtools_merge_dedup:
-#   realignertargetcreator:
-#   indelrealigner:
-#   bam_clipoverlap:
-#   symlink_userbams:
-#   bam_clipoverlap_userbams:
-#   samtools_index:
-#   symlink_bams:
-#   samtools_subsample:
-#   # Sample QC
-#   samtools_flagstat:
-#   qualimap:
-#   qualimap_userprovided:
-#   qualimap_multiqc:
-#   endo_cont:
-#   compile_endo_cont:
-#   ind_unfiltered_depth:
-#   ind_mapQ_baseQ_depth:
-#   ind_filtered_depth:
-#   summarize_ind_depth:
-#   merge_ind_depth:
-#   combine_sample_qc:
-#   sample_qc_summary:
-#   ibs_ref_bias_nofilts:
-#   ibs_ref_bias_filts:
-#   merge_ibs_ref_bias:
-#   plot_ibs_ref_bias:
-#   ibs_ref_bias_table_html:
-#   damageprofiler:
-#   mapDamage2_rescaling:
-#   dna_damage_multiqc:
-#   # ANGSD input file preparation
-#   angsd_makeBamlist:
-#   popfile:
-#   angsd_sites_index:
-#   # ANGSD -doSaf
-#   angsd_doSaf_pop:
-#   realSFS_catsaf:
-#   angsd_doSaf_sample:
-#   # ANGSD -doGlf2/-doMaf (Beagle/MAFs)
-#   angsd_doGlf2:
-#   merge_beagle:
-#   merge_maf:
-#   snpset:
-#   link_mafs:
-#   angsd_doMaf:
-#   # Linkage disequilibrium (LD) calculation, decay, and pruning
-#   ngsLD_estLD:
-#   combine_LD_files:
+  bwa_samse_merged:
+    runtime: "6h"
+  bwa_mem_paired:
+    runtime: "attempt * 2880"
+  bwa_mem_merged:
+    runtime: "attempt * 2880"
+  samtools_merge_collapsed_libs:
+    runtime: "attempt * 720"
+  samtools_merge_paired_units:
+    runtime: "attempt * 720"
+  mark_duplicates:
+    runtime: "attempt * 1440"
+  samtools_merge_dedup:
+    runtime: "attempt * 1440"
+  realignertargetcreator:
+    runtime: "attempt * 720"
+  indelrealigner:
+    runtime: "attempt * 1440"
+  bam_clipoverlap:
+    runtime: "attempt * 720"
+  symlink_userbams:
+    runtime: "5m"
+  bam_clipoverlap_userbams:
+    runtime: "attempt * 720"
+  samtools_index:
+    runtime: "1h"
+  symlink_bams:
+    runtime: "5m"
+  samtools_subsample:
+    runtime: "attempt * 720"
+  # Sample QC
+  samtools_flagstat:
+    runtime: "1h"
+  qualimap:
+    runtime: "6h"
+  qualimap_userprovided:
+    runtime: "6h"
+  qualimap_multiqc:
+    runtime: "1h"
+  endo_cont:
+    runtime: "15m"
+  compile_endo_cont:
+    runtime: "15m"
+  ind_unfiltered_depth:
+    runtime: "attempt * 120"
+  ind_mapQ_baseQ_depth:
+    runtime: "attempt * 120"
+  ind_filtered_depth:
+    runtime: "attempt * 60"
+  summarize_ind_depth:
+    runtime: "1h"
+  merge_ind_depth:
+    runtime: "15m"
+  combine_sample_qc:
+    runtime: "15m"
+  sample_qc_summary:
+    runtime: "15m"
+  ibs_ref_bias_nofilts:
+    runtime: "attempt * 720"
+  ibs_ref_bias_filts:
+    runtime: "attempt * 720"
+  merge_ibs_ref_bias:
+    runtime: "15m"
+  plot_ibs_ref_bias:
+    runtime: "30m"
+  ibs_ref_bias_table_html:
+    runtime: "15m"
+  damageprofiler:
+    runtime: "attempt * 60"
+  mapDamage2_rescaling:
+    runtime: "1d"
+  dna_damage_multiqc:
+    runtime: "1h"
+  # ANGSD input file preparation
+  angsd_makeBamlist:
+    runtime: "15m"
+  popfile:
+    runtime: "15m"
+  angsd_sites_index:
+    runtime: "1h"
+  # ANGSD -doSaf
+  angsd_doSaf_pop:
+    runtime: "attempt * 180"
+  realSFS_catsaf:
+    runtime: "attempt * 60"
+  angsd_doSaf_sample:
+    runtime: "120m"
+  # ANGSD -doGlf2/-doMaf (Beagle/MAFs)
+  angsd_doGlf2:
+    runtime: "attempt * 720"
+  merge_beagle:
+    runtime: "4h"
+  merge_maf:
+    runtime: "4h"
+  snpset:
+    runtime: "1h"
+  link_mafs:
+    runtime: "1h"
+  angsd_doMaf:
+    runtime: "attempt * 720"
+  # Linkage disequilibrium (LD) calculation, decay, and pruning
+  ngsLD_estLD:
+    runtime: "attempt * 720"
+  combine_LD_files:
+    runtime: "1h"
   ngsLD_prune_sites:
-    runtime: "7d"
+    runtime: "1d"
   prune_chunk_beagle:
+    runtime: "6h"
+  merge_pruned_beagles:
+    runtime: "4h"
+  combine_LDdecay_files:
+    runtime: "1h"
+  fit_LD_decay:
+    runtime: "8h"
+  # Kinship/relatedness
+  est_kinship_stats_sfs:
+    runtime: "1h"
+  compile_kinship_stats_sfs:
+    runtime: "15m"
+  doGlf1_ibsrelate:
+    runtime: "attempt * 360"
+  ibsrelate:
     runtime: "7d"
-#   merge_pruned_beagles:
-#   combine_LDdecay_files:
-#   fit_LD_decay:
-#   # Kinship/relatedness
-#   est_kinship_stats_sfs:
-#   compile_kinship_stats_sfs:
-#   doGlf1_ibsrelate:
-#   ibsrelate:
-#   est_kinship_stats_ibs:
-#   kinship_table_html:
-#   ngsrelate_ibsrelate_only:
-#   ngsrelate_freqbased:
-#   ngsrelate_freqbased_merge:
-#   ngsrelate_summary:
-#   # PCA/Admixture
-#   remove_excl_pca_admix:
-#   pca_pcangsd:
-#   plot_pca:
+  est_kinship_stats_ibs:
+    runtime: "1h"
+  kinship_table_html:
+    runtime: "15m"
+  ngsrelate_ibsrelate_only:
+    runtime: "attempt * 360"
+  ngsrelate_freqbased:
+    runtime: "attempt * 360"
+  ngsrelate_freqbased_merge:
+    runtime: "15m"
+  ngsrelate_summary:
+    runtime: "15m"
+  # PCA/Admixture
+  remove_excl_pca_admix:
+    runtime: "1h"
+  pca_pcangsd:
+    runtime: "4h"
+  plot_pca:
+    runtime: "1h"
   ngsAdmix:
     runtime: "7d"
-#   plot_admix:
-#   evalAdmix:
-#   plot_evalAdmix:
-#   # Site frequency spectra (SFS)
-#   realSFS_1dSFS:
-#   realSFS_1dSFS_bootstrap:
-#   realSFS_2dSFS:
-#   realSFS_2dSFS_bootstrap:
-#   # Thetas (nucleotide diversity, Watterson's theta, Tajima's D)
-#   realSFS_saf2theta:
-#   thetaStat:
-#   plot_thetas:
-#   theta_tables:
-#   # FST
-#   realSFS_fst_index:
-#   realSFS_fst_stats:
-#   realSFS_fst_stats2:
-#   aggregate_fst_global:
-#   aggregate_fst_window:
-#   plot_fst:
-#   # Heterozygosity
-#   heterozygosity:
-#   heterozygosity_table:
-#   # Inbreeding/Runs of homozygosity
-#   ngsf_hmm:
-#   convert_ibd:
-#   plot_froh:
-#   # Identity by state matrix
-#   angsd_doIBS:
+  plot_admix:
+    runtime: "1h"
+  evalAdmix:
+    runtime: "1h"
+  plot_evalAdmix:
+    runtime: "15m"
+  # Site frequency spectra (SFS)
+  realSFS_1dSFS:
+    runtime: "attempt * 720"
+  realSFS_1dSFS_bootstrap:
+    runtime: "7d"
+  realSFS_2dSFS:
+    runtime: "attempt * 720"
+  realSFS_2dSFS_bootstrap:
+    runtime: "7d"
+  # Thetas (nucleotide diversity, Watterson's theta, Tajima's D)
+  realSFS_saf2theta:
+    runtime: "4h"
+  thetaStat:
+    runtime: "4h"
+  plot_thetas:
+    runtime: "1h"
+  theta_tables:
+    runtime: "15m"
+  # FST
+  realSFS_fst_index:
+    runtime: "2h"
+  realSFS_fst_stats:
+    runtime: "2h"
+  realSFS_fst_stats2:
+    runtime: "2h"
+  aggregate_fst_global:
+    runtime: "1h"
+  aggregate_fst_window:
+    runtime: "1h"
+  plot_fst:
+    runtime: "1h"
+  # Heterozygosity
+  heterozygosity:
+    runtime: "1h"
+  heterozygosity_table:
+    runtime: "15m"
+  # Inbreeding/Runs of homozygosity
+  ngsf_hmm:
+    runtime: "1d"
+  convert_ibd:
+    runtime: "1h"
+  plot_froh:
+    runtime: "1h"
+  froh_table:
+    runtime: "15m"
+  # Identity by state matrix
+  angsd_doIBS:
+    runtime: "1d"
