--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,6 +16,7 @@ theme:
       note: octicons/tag-16
       question: octicons/question-16
   features:
+    - toc.integrate
     - search.highlight
     - content.code.annotate
   palette:
