Add documentation on extending PopGLen
Adds a small example case of how to replace a tool in PopGLen with another, which also is how one can extend and add rules to continue the workflow.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,7 @@ nav:
   - Tutorial: tutorial.md
   - Cluster execution: cluster-execution.md
   - Setting job resources: resources.md
+  - Extending PopGLen: extending-workflows.md
   - Output file path overview: outfile-summ.md
 theme:
   name: material
